# crossdylib

./: .gitignore  Cargo.toml  README.md
crossdylib/: Cargo.toml
crossdylib/src/: lib.rs
tests/: test.bat  test.sh
tests/a1/: Cargo.toml
tests/a1/src/: lib.rs
tests/b2/: Cargo.toml
tests/b2/src/: lib.rs
tests/c3/: Cargo.toml
tests/c3/src/: lib.rs
tests/main/: Cargo.toml
tests/main/src/: main.rs
